[package]
name = "spire-proxy"   # crates.io 上唯一的名字
version = "0.0.28"
authors = ["lsk"]
license = "Apache-2.0"
edition = "2024"
description = "A high-performance proxy server with control plane, supporting HTTP/HTTPS, gRPC, and advanced routing capabilities"
repository = "https://github.com/lsk569937453/Spire"
homepage = "https://github.com/lsk569937453/Spire"
keywords = ["proxy", "http", "https", "grpc", "reverse-proxy"]
categories = ["network-programming",
 "web-programming",
 "web-programming::http-server"]
readme = "README.md"

[[bin]]
name = "spire"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true
#debug = true
# ##Optimize For Size

[dependencies]
async-trait = "=0.1.89"
axum = { version = "=0.8.8", features = ["macros"] }
base64 = "=0.22.1"
bytes = "=1.11.0"
chrono = "=0.4.43"
clap = { version = "=4.5.55", features = ["derive", "cargo"] }
delay_timer = "=0.11.6"
derive_builder = "=0.20.2"
flate2 = "=1.1.8"
futures = { version = "=0.3.31", features = ["thread-pool"] }
futures-util = { version = "=0.3.31", default-features = false }
h2 = "=0.4.13"
home = "=0.5.12"
http = "=1.4.0"
http-body = "=1.0.1"
http-body-util = { version = "=0.1.3" }
httpdate = "=1.0.3"
hyper = { version = "=1.8.1", features = ["full"] }
hyper-rustls = { version = "=0.27.7", default-features = false, features = [
    "webpki-roots",
    "native-tokio",
    "http1",
    "tls12",
    "logging",
] }
hyper-staticfile = "=0.10.1"
hyper-util = { version = "=0.1.19", features = ["full"] }
instant-acme = { version = "=0.8.4", default-features = false, features = [
    "hyper-rustls",
    "ring",
] }
ipnet = "=2.11.0"
iprange = "=0.6.7"
jsonwebtoken = "=10.3.0"

lazy_static = "=1.5.0"
logroller = { version = "=0.1.10", features = ["tracing"] }
mime = "=0.3.17"
mockall = "=0.14.0"
notify = "=8.2.0"
num_cpus = "=1.17.0"
oas3 = { version = "=0.20.1", features = ["yaml-spec"] }
once_cell = "=1.21.3"
pkcs8 = { version = "=0.10.2", features = ["encryption", "pem", "std"] }
prometheus = "=0.14.0"
prost-reflect = { version = "=0.16.3", features = ["serde"] }
rand = "=0.9.2"
rcgen = { version = "=0.14.7", default-features = false, features = [
    "pem",
    "crypto",
    "ring",
] }
regex = "=1.12.2"
rustls = { version = "=0.23.36", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
rustls-pemfile = "=2.2.0"
rustls-pki-types = "=1.14.0"
serde = "=1.0.228"
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
serial_test = "=3.3.1"
sha-1 = "=0.10.1"
strum_macros = "=0.27.2"
tempfile = "=3.24.0"
thiserror = "=2.0.18"
time = "=0.3.46"
tokio = { version = "=1.49.0", features = ["full", "tracing"] }
tokio-rustls = { version = "=0.26.4", default-features = false }
tokio-util = { version = "=0.7.18", features = ["full", "time"] }
tonic = "=0.14.2"
tower = { version = "=0.5.3", features = ["util"] }
tower-http = { version = "=0.6.8", features = ["full"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.22" }
typetag = "=0.2.21"
url = "=2.5.8"
uuid = { version = "=1.20.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
webpki-roots = "=1.0.5"
x509-parser = "=0.18.0"
zstd = "=0.13.3"
# native-tls = "0.2.11"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = "=0.1.48"
